# floria-chat

./: LICENSE  README.md  README_en.md  app.py  app_multilang.py  chat_floria.py  floria_chat_sample_1.md  floria_chat_sample_1_en.md  requirements.txt  setup.cfg
samples/: floria_chat_sample_1.md
