[metadata]
name = floria-chat
version = 1.0.0
author = Atsushi999
license = MIT
license_files = LICENSE
description = Lightweight AI chat system with Floria (Llama via OpenRouter)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Atsushi999/floria-chat
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    requests>=2.31
    python-dotenv>=1.0
    floria-snippets>=0.0.1
